--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="index.js"></script>
 </head>
 <body>
-    
+    <div id="clockContainer">
+        <div id="hour"></div>
+        <div id="minute"></div>
+        <div id="second"></div>
+    </div>
 </body>
 </html>
